--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,11 @@ name = "pypi"
 [packages]
 flask = "==2.0.1"
 flask-cors = "==3.0.10"
+wraps = "*"
+sqlalchemy = "*"
+flask-sqlalchemy = "*"
+werkzeug = "*"
+jwt = "*"
 
 [dev-packages]
 
