--- a/Pipfile
+++ b/Pipfile
@@ -2,7 +2,6 @@
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
-
 [packages]
 flask = "==2.0.1"
 flask-cors = "==3.0.10"
@@ -11,7 +10,7 @@ sqlalchemy = "*"
 flask-sqlalchemy = "*"
 werkzeug = "*"
 jwt = "*"
-
+Gunicorn = "*"
 [dev-packages]
 
 [requires]
