--- a/Pipfile
+++ b/Pipfile
@@ -2,15 +2,17 @@
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
+
 [packages]
 flask = "==2.0.1"
 flask-cors = "==3.0.10"
 wraps = "*"
-sqlalchemy = "*"
+sqlalchemy = "==1.4.36"
 flask-sqlalchemy = "*"
 werkzeug = "*"
 jwt = "*"
 Gunicorn = "*"
+
 [dev-packages]
 
 [requires]
